<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bsurfers"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/UserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:hint="@string/hint_user"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/PassRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UserRegister"
        android:layout_below="@+id/UserRegister"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_pwd"
        android:textSize="25sp" />

    <Button
        android:id="@+id/registry"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PassRegister"
        android:layout_below="@+id/PassRegister"
        android:layout_marginTop="28dp"
        android:text="@string/registrarse_button"
        android:textSize="25sp"
        android:onClick="Registrar" />

</RelativeLayout>
