<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bsurfers"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnSpots"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Spots"
        android:textSize="25sp"
        android:onClick="GoToSpots" />

    <Button
        android:id="@+id/btnMySpots"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSpots"
        android:layout_below="@+id/btnSpots"
        android:layout_marginTop="28dp"
        android:text="@string/MySpots"
        android:textSize="25sp"
        android:onClick="GoToMySpots" />

    <Button
        android:id="@+id/btnPrevisiones"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMySpots"
        android:layout_below="@+id/btnMySpots"
        android:layout_marginTop="28dp"
        android:text="@string/Previsiones"
        android:textSize="25sp"
        android:onClick="GoToPrevisiones" />

    <!--<Button
        android:id="@+id/btnMyProfile"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPrevisiones"
        android:layout_below="@+id/btnPrevisiones"
        android:layout_marginTop="28dp"
        android:text="@string/MyProfile"
        android:textSize="25sp"
        android:onClick="" />-->

    <Button
        android:id="@+id/btnVideos"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPrevisiones"
        android:layout_below="@+id/btnPrevisiones"
        android:layout_marginTop="28dp"
        android:text="@string/Videos"
        android:textSize="25sp"
        android:onClick="GoToVideos" />

</RelativeLayout>
