<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bsurfers"
    tools:context="com.example.juan.surfeetac.Videos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.juan.surfeetac.Videos">

            <TextView
                android:id="@+id/txtview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="20"
                android:hint="@string/video1"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/btnVideo1"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="0dp"
                android:text="@string/WatchVideo"
                android:textSize="15sp"
                android:onClick="GoWatchVideo1" />

            <TextView
                android:id="@+id/txtview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/video2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnVideo2"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="0dp"
                android:text="@string/WatchVideo"
                android:textSize="15sp"
                android:onClick="GoWatchVideo2" />

            <TextView
                android:id="@+id/txtview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/video3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnVideo3"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="0dp"
                android:text="@string/WatchVideo"
                android:textSize="15sp"
                android:onClick="GoWatchVideo3" />

            <TextView
                android:id="@+id/txtview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/video4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnVideo4"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="0dp"
                android:text="@string/WatchVideo"
                android:textSize="15sp"
                android:onClick="GoWatchVideo4" />

            <TextView
                android:id="@+id/txtview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/video5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnVideo5"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="0dp"
                android:text="@string/WatchVideo"
                android:textSize="15sp"
                android:onClick="GoWatchVideo5" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
